[gd_scene load_steps=13 format=2]

[ext_resource path="res://Level1.gd" type="Script" id=1]
[ext_resource path="res://player/environment/houseSmallAlt2.png" type="Texture" id=2]
[ext_resource path="res://player/environment/houseSmallAlt2_open.png" type="Texture" id=3]
[ext_resource path="res://interface/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://player/environment/castleSmallAlt.png" type="Texture" id=5]
[ext_resource path="res://player/environment/castleSmallAlt_open.png" type="Texture" id=6]
[ext_resource path="res://player/environment/castleSmall.png" type="Texture" id=7]
[ext_resource path="res://player/environment/castleSmall_open.png" type="Texture" id=8]
[ext_resource path="res://player/environment/houseSmall2.png" type="Texture" id=9]
[ext_resource path="res://player/environment/houseSmall2_open.png" type="Texture" id=10]
[ext_resource path="res://interface/buttons/arrow-32.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 4 )

[node name="ExplorerRooms" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 75.3167
margin_top = 61.3692
margin_right = 228.317
margin_bottom = 201.369
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 67.0
margin_top = 198.0
margin_right = 271.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 1 )
text = "  TUC-Hackerspace
Donnerstags 19-23 uhr"

[node name="Label5" type="Label" parent="."]
margin_left = 296.0
margin_top = 25.0
margin_right = 793.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Click the door bell, to engage with someone"

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 69.7377
margin_top = 329.162
margin_right = 285.738
margin_bottom = 499.162
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="."]
margin_left = 80.9476
margin_top = 507.635
margin_right = 284.948
margin_bottom = 554.635
custom_fonts/font = SubResource( 1 )
text = "              GVR
Mittwochs 19-21 uhr"
__meta__ = {
"_edit_group_": true
}

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 708.535
margin_top = 69.7376
margin_right = 924.535
margin_bottom = 239.738
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Label3" type="Label" parent="."]
margin_left = 728.114
margin_top = 251.001
margin_right = 932.114
margin_bottom = 298.001
custom_fonts/font = SubResource( 1 )
text = "        TUCreate
Mittwochs 15-19 uhr"
__meta__ = {
"_edit_group_": true
}

[node name="TextureButton4" type="TextureButton" parent="."]
margin_left = 750.378
margin_top = 359.847
margin_right = 966.378
margin_bottom = 529.847
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Label4" type="Label" parent="."]
margin_left = 728.114
margin_top = 524.373
margin_right = 932.114
margin_bottom = 571.373
custom_fonts/font = SubResource( 1 )
text = "        Chess
Mittwochs 17-19 uhr"
__meta__ = {
"_edit_group_": true
}

[node name="TextureButton5" type="TextureButton" parent="."]
margin_left = 971.0
margin_top = 6.0
margin_right = 1003.0
margin_bottom = 49.0
texture_normal = ExtResource( 11 )
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton5" to="." method="_on_TextureButton5_pressed"]
