[gd_scene load_steps=7 format=2]

[ext_resource path="res://Level1.gd" type="Script" id=1]
[ext_resource path="res://player/environment/castleSmall.png" type="Texture" id=2]
[ext_resource path="res://player/environment/castleSmall_open.png" type="Texture" id=3]
[ext_resource path="res://interface/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://interface/buttons/arrow-32.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 320.794
margin_top = 103.212
margin_right = 536.794
margin_bottom = 273.212
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 352.0
margin_top = 283.0
margin_right = 527.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 1 )
text = "Your friends House
(Anytime)"

[node name="Label2" type="Label" parent="."]
margin_left = 344.0
margin_top = 4.0
margin_right = 621.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
text = "Click the door bell"

[node name="returnButton5" type="TextureButton" parent="."]
margin_left = 943.0
margin_top = 17.0
margin_right = 982.0
margin_bottom = 57.0
texture_normal = ExtResource( 5 )
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="returnButton5" to="." method="_on_returnButton5_pressed"]
